new clone logic added in 8042235 is missing from compiler intrinsics

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b105

      8042235 add some special case logic in JVM_Clone but the intrinsic for clone in C2 doesn't appear to have been updated and there doesn't appear to be any gating logic keeping the clone from being intrinsified. It's not obvious to me how to trigger MemberName.clone() though it's used pretty commonly in the method handle API. Some generic mechanism to disable intrinsification of clone for that type is probably the best fix. Disabling clone for types with injected fields would work though that's a somewhat indirect solution.

            Assignee:
            Vladimir Ivanov
            Reporter:
            Tom Rodriguez
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: