8133612: new clone logic added in 8042235 is missing from compiler intrinsics

Reviewed-by: roland